Fix about section alignment, again

--- a/wwfypc-react/src/Home/About/style/About.scss
+++ b/wwfypc-react/src/Home/About/style/About.scss
@@ -9,6 +9,7 @@
   min-height: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
 
   header {
     height: 100%;
